# ons-postcode-db

./: .gitignore  README.md  explore-compression.ipynb  explore-data.ipynb  explore-geo.ipynb  explore-incodes.ipynb  explore.ipynb  pyproject.toml
sfdata_postcodes/: __main__.py  binary_geo.py  binary_read.py  binary_write.py  encoder.py  populate_geo.py  spec.py  tables.py
sfdata_postcodes/binfile/: populate_binfile.py  reader.py
sfdata_postcodes/data/: __init__.py  bindata.py  codes.py  extras.py  postcode.py  spatial.py
sfdata_postcodes/rdb/: populate_rdb.py  tables.py
sfdata_postcodes/util/: __init__.py
sfdata_postcodes/zipfile/: __init__.py
tests/: test_encoder.py
