[tool.poetry]
name = "postcodes"
version = "0.1.0"
description = ""
authors = ["Kaj Siebert <kaj@k-si.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.64.0"
tablib = "^3.2.1"
SQLAlchemy = "^1.4.39"
click = "^8.1.3"
dahuffman = "^0.4.1"
burrowswheeler = "^1.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.4.3"
ipython-sql = "^0.4.1"
kaleido = "0.2.1"
pandas = "^1.4.3"
dtale = "^2.6.0"
pytest = "^7.1.2"
geopy = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
